--- a/index.html
+++ b/index.html
@@ -6,100 +6,152 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-        rel="stylesheet">
+
 </head>
 
 <body style="margin: 0;padding: 0;">
-    <div class="main-bg" style="background:#27A1DB;width: 100%;height: 100%;padding-top: 75px;padding-bottom: 40px;font-family: 'Roboto', sans-serif;
-    ">
-        <div class="content" style="width: 500px;margin: 0 auto;">
-            <div class="" style="background-color: white;width: 100%;">
-                <table style="padding:35px 30px ; width: 100%;">
-                         <tr>
-                            <td class="logo" style="width: 180px;">
-                                <img style="width: 100%;" src="https://demo.a1portal.com.au/assets/imgs/advanchedOneLogo-v.png"
-                                alt="">
-                            </td>
-                            <td style="text-align: right;">
-                                <h2 style="font-size: 12px;font-weight:bold;margin-bottom: 0;color: #27A1DB;">ADVANCED ONE PTY
-                                    LTD</h2>
-                                <p style="font-size: 12px;font-weight:normal;margin: 0; color: #1E293B;">ABN: 62 161 859 552</p>
-                            </td>
-                         </tr>
+    <table  align="center" border="0" cellpadding="1" cellspacing="1" style="width: 600px;background:#27A1DB;padding-top: 75px;padding-bottom: 40px;font-family: 'Roboto', sans-serif;">
+    <!-- <table class="main-bg" style="background:#27A1DB;width: 600px;;padding-top: 75px;padding-bottom: 40px;font-family: 'Roboto', sans-serif;"> -->
+        <tr >
+            <td>
+                <table style="background: white; width: 550px;    margin: 0 auto;padding: 20px;     margin-left: 22px;">
+                    <tr>
+                        <td>
+                            <img style="width: 100%;"
+                                src="https://demo.a1portal.com.au/assets/imgs/advanchedOneLogo-v.png" alt="">
+                        </td>
+                        <td style="text-align: right;">
+                            <h2 style="font-size: 12px;font-weight:bold;margin-bottom: 0;color: #27A1DB;">ADVANCED ONE PTYLTD</h2>
+                            <p style="font-size: 12px;font-weight:normal;margin: 0; color: #1E293B;">ABN: 62 161 859 552
+                            </p>
+                        </td>
+                    </tr>
                 </table>
-            </div>
-            <div class="meddel-area" style="background-color: #334155;width: 100%;">
-                <div class="" style="padding:45px 20px;color: white;">
-                    <h1 style="text-align: center;font-size: 27px;font-weight:bold;margin: 0; margin-bottom: 40px;">
-                        Order Conformation</h1>
-                    <p style="font-size: 16px;font-weight:normal;line-height: 24px;"><span
-                            style="font-size: 16px;font-weight:bold; display: block;">Hello [name]</span>
-                        Thank you for your order with Advanced One Pty Ltd.</p>
-                    <p style="font-size: 16px;font-weight:normal;line-height: 24px; margin-bottom: 44px;">Please check
-                        the attachment for details copy of your invoice.</p>
-                    <h3 style="text-align: center;font-size: 16px;font-weight:bold;margin: 0; margin-bottom: 17px;">
-                        ORDER SUMMARY</h3>
-       
-                    <table style="width: 100%;font-weight:bold;font-size: 14px;">
-                        <tr>
-                            <td >Invoice Number: 3173</td>
-                            <td style="padding-left: 120px;">Tentative Date: <br> 19/01/2021 - 26/01/2021</td>
+                <table style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;    margin-left: 22px;">
+                    <tr>
+                        <td style="text-align:center;font-size: 30px;font-weight: bold;">Order Conformation
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding-top: 0;padding-bottom: 0;">Hello [name] </td>
+                    </tr>
+                    <tr>
+                        <td style="padding-top: 0;padding-bottom: 0;">Thank you for your order with Advanced One Pty
+                            Ltd.</td>
+                    </tr>
+                    <tr>
+                        <td style="padding-top: 0;padding-bottom: 0;">Please check the attachment for details copy of
+                            your invoice. </td>
+                    </tr>
+                </table>
+                <table style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;    margin-left: 22px;">
+                    <tr style="padding-top: 0;padding-bottom: 0;">
+                        <td style="padding-top: 0;padding-bottom: 0;">Invoice Number: 3173</td>
+                        <td style="padding-top: 0;padding-bottom: 0;">Tentative Date:
+                            19/01/2021 - 26/01/2021</td>
+                    </tr>
+                    <tr style="padding-top: 0;padding-bottom: 0;">
+                        <td style="width: 41%;padding-top: 0;padding-bottom: 0;">Invoice Date: 22/12/2020</td>
+                    </tr>
+                    <tr style="padding-top: 0;padding-bottom: 0;">
+                        <td style="padding-top: 0;padding-bottom: 0;">Order Date: 22/12/2020</td>
+                    </tr>
+                </table>
+                <table style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;    margin-left: 22px;">
+                    <tr>
+                        <td style="padding-top: 0;padding-bottom: 0;">Total</td>
+                        <td style="text-align: right;padding-top: 0;padding-bottom: 0;">$234.00</td>
+                    </tr>
+                    <tr>
+                        <td style="padding-top: 0;padding-bottom: 0;">Paid To Date</td>
+                        <td style="text-align: right;padding-top: 0;padding-bottom: 0;">$134.00</td>
 
-                        </tr>
-                        <tr>
-                            <td>Invoice Date: 22/12/2020</td>
-                        </tr>
-                        <tr>
-                            <td>Order Date: 22/12/2020</td>
-                        </tr>
-                    </table>
-                    <br>
-                    <table style="width: 100%;font-weight:bold;font-size: 16px;">
-                        <tr>
-                            <td>Total</td>
-                            <td style="text-align: right;">$234.00</td>
+                    </tr>
+                    <tr>
+                        <td style="padding-top: 0;padding-bottom: 0;">Payment Due</td>
+                        <td style="text-align: right;padding-top: 0;padding-bottom: 0;">$100.00</td>
+                    </tr>
+                </table>
+                <table style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;    margin-left: 22px;">
+                    <tr>
+                        <td>If you have any query please call us on 1300 85 92 94.</td>
+                    </tr>
+                </table>
+                <table
+                    style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;padding-bottom: 20px;    margin-left: 22px;">
+                    <tr>
+                        <td style="padding-top: 0;padding-bottom: 0;">ADVANCED ONE PTY LTD
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding-top: 0;padding-bottom: 0;">PO Box 944, Sunnybank, QLD 4109 </td>
+                    </tr>
+                    <tr>
+                        <td style="color: white;padding-top: 0;padding-bottom: 0;">Email: <a
+                                style="color: white;  text-decoration: none;font-size: 14px;font-weight:normal;"
+                                href="mailto:admin@advancedone.com.au">admin@advancedone.com.au</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="padding-top: 0;">ABN: 62 161 859 552 </td>
+                    </tr>
+                </table>
+                <table
+                    style=" width: 550px;    margin: 0 auto;padding: 20px; color: white;padding-bottom: 20px;text-align: center;    margin-left: 22px;">
+                    <tr>
+                        <td style="text-align: center;padding-top: 0;padding-bottom: 0;">
+                            <a style="color: #334155;  text-decoration: none;font-size: 14px;font-weight:normal;"
+                                href="www.advancedone.com.au">www.advancedone.com.au</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;padding-top: 0;padding-bottom: 0;">
+                            © Copyright, All Rights Reserved Advanced One Pty Ltd
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;padding-top: 0;padding-bottom: 0;">
+                            <a style="color: white;  text-decoration: none;font-size: 14px;font-weight:normal;"
+                                href="https://www.a1portal.com.au/terms-and-conditions">Terms & Conditions</a> | <a
+                                style="color: white;  text-decoration: none;font-size: 14px;font-weight:normal;"
+                                href="www.advancedone.com.au"> Privacy Policy</a>
+                        </td>
+                    </tr>
+                </table>
+                <table style=" width: 550px;    margin: 0 auto;padding: 10px; color: white;padding-bottom: 10px;text-align: center;    margin-left: 22px;">
+                    <tr>
+                        <td style="text-align: center;color: white;padding-top: 0;padding-bottom: 0;">
+                            LICENCES
+                        </td>
+                    </tr>
+                </table>
+                <table
+                    style=" width: 550px;      margin: 0 auto;padding: 10px; color: white;padding-bottom: 10px;text-align: center;border-top: 1px solid white;border-bottom: 1px solid white; margin-left: 22px; ">
+                    <tr>
+                        <td style="text-align: center;color: white;font-size: 12px;padding-top: 0;padding-bottom: 0;">
+                            QBCC Lic. No: 1307036 | ARCTICK Lic. No: AU37346 | VIC Elec. Cont. Lic. No: 28462
+                        </td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;color: white;font-size: 12px;padding-top: 0;padding-bottom: 0;">
+                            NT Elec. Cont. Lic No: C 4088 QLD Elec. Cont. Lic. No: 78826 | NSW Elec. Cont. Lic. No:
+                            18954C</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;color: white;font-size: 12px;padding-top: 0;padding-bottom: 0;">
+                            SA Builders Lic. No: BLD 300715 WA Elec. Cont. Lic. No: EC14362</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;color: white;font-size: 12px;padding-top: 0;padding-bottom: 0;">
+                            TAS Elec. Cont. Lic. No: 15607965 | ACT Elec. Cont. Lic. No: 20201156</td>
+                    </tr>
+                </table>
+            </td>
+        </tr>
+    </table>
 
-                        </tr>
-                        <tr>
-                            <td>Paid To Date</td>
-                            <td style="text-align: right;">$134.00</td>
 
-                        </tr>
-                        <tr>
-                            <td>Payment Due</td>
-                            <td style="text-align: right;">$100.00</td>
-                        </tr>
-                    </table>
-                    <p style="font-size: 16px;font-weight:normal;line-height: 24px; margin-bottom: 17px;">If you have
-                        any query please call us on 1300 85 92 94. </p>
 
-                    <div class="">
-                        <h2 style="font-size: 14px;font-weight:bold;margin-bottom: 0;">ADVANCED ONE PTY LTD</h2>
-                        <p style="margin: 0; font-size: 14px;font-weight: normal;">PO Box 944, Sunnybank, QLD 4109</p>
-                        <p style="margin: 0;">Email: admin@advancedone.com.au</p>
-                        <p style="margin: 0; font-size: 14px;font-weight: normal;">ABN: 62 161 859 552</p>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-area" style="text-align:  center;margin-top:20px">
-                <a style="color: #334155;  text-decoration: none;font-size: 14px;font-weight:normal;"
-                    href="www.advancedone.com.au">www.advancedone.com.au</a>
-                <p style="margin: 0;color: white;line-height:24px;font-size: 12px;font-weight:normal;">© Copyright, All
-                    Rights Reserved Advanced One Pty Ltd</p>
-                <p
-                    style="margin: 0;color: white;line-height:24px;font-size: 12px;font-weight:normal;border-bottom: 1px solid white;padding-bottom:18px;">
-                    Terms & Conditions | Privacy Policy</p>
-                <h3 style="color: #CBD5E1;font-size: 12px;font-weight:normal">LICENCES</h3>
-                <p style="color: #CBD5E1;font-size: 10px;font-weight:normal;border-bottom: 1px solid white;padding-bottom:18px;"">QBCC Lic. No: 1307036 | ARCTICK Lic. No: AU37346 | VIC Elec. Cont. Lic. No: 28462 <br>
-                    NT Elec. Cont. Lic No: C 4088 QLD Elec. Cont. Lic. No: 78826 | NSW Elec. Cont. Lic. No: 18954C <br>
-                    SA Builders Lic. No: BLD 300715 WA Elec. Cont. Lic. No: EC14362 <br>
-                    TAS Elec. Cont. Lic. No: 15607965 | ACT Elec. Cont. Lic. No: 20201156</p>
-              </div>       
-        </div>
-    </div>
-    
 </body>
+
 </html>
