--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 
 </head>
 
-<body style="margin: 0;padding: 0;">
-    <table  align="center" border="0" cellpadding="1" cellspacing="1" style="width: 600px;background:#27A1DB;padding-top: 75px;padding-bottom: 40px;font-family: 'Roboto', sans-serif;">
-    <!-- <table class="main-bg" style="background:#27A1DB;width: 600px;;padding-top: 75px;padding-bottom: 40px;font-family: 'Roboto', sans-serif;"> -->
+<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="margin: 0px; padding: 0px; background-color: #FFFFFF;" bgcolor="#FFFFFF"><table bgcolor="#27A1DB" width="100%" border="0" align="center" cellpadding="0" cellspacing="0"><tr><td><table width="600" border="0" align="center" cellpadding="0" cellspacing="0"><tr><td valign="top" style="padding-top:30px; padding-bottom:30px;">
+    <table class="main-bg"  align="center" border="0" cellpadding="1" cellspacing="1" style="width: 600px;background:#27A1DB;padding-top: 75px;padding-bottom: 40px;font-family: 'Roboto', sans-serif;">
         <tr >
             <td>
                 <table style="background: white; width: 550px;    margin: 0 auto;padding: 20px;     margin-left: 22px;">
@@ -74,7 +73,7 @@
                 </table>
                 <table style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;    margin-left: 22px;">
                     <tr>
-                        <td>If you have any query please call us on 1300 85 92 94.</td>
+                        <td>If you have any query please call us on 1300 85 92 94 <a style="color:white; display: inline-block;text-decoration: none;">admin@advancedone.com.au</a>.</td>
                     </tr>
                 </table>
                 <table
@@ -96,6 +95,7 @@
                         <td style="padding-top: 0;">ABN: 62 161 859 552 </td>
                     </tr>
                 </table>
+                <!-- footer -->
                 <table
                     style=" width: 550px;    margin: 0 auto;padding: 20px; color: white;padding-bottom: 20px;text-align: center;    margin-left: 22px;">
                     <tr>
