--- a/index.html
+++ b/index.html
@@ -9,26 +9,34 @@
 
 </head>
 
-<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="margin: 0px; padding: 0px; background-color: #FFFFFF;" bgcolor="#FFFFFF"><table bgcolor="#27A1DB" width="100%" border="0" align="center" cellpadding="0" cellspacing="0"><tr><td><table width="600" border="0" align="center" cellpadding="0" cellspacing="0"><tr><td valign="top" style="padding-top:30px; padding-bottom:30px;">
-    <table class="main-bg"  align="center" border="0" cellpadding="1" cellspacing="1" style="width: 600px;background:#27A1DB;padding-top: 75px;padding-bottom: 40px;font-family: 'Roboto', sans-serif;">
+<body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style="margin: 0px; padding: 0px; background-color: #FFFFFF;" bgcolor="#FFFFFF"><table bgcolor="#27A1DB" width="100%" border="0" align="center" cellpadding="0" cellspacing="0"><tr><td><table width="500" border="0" align="center" cellpadding="0" cellspacing="0"><tr><td valign="top" style="padding-top:30px; padding-bottom:30px;">
+    <table class="main-bg"  align="center" border="0" cellpadding="1" cellspacing="1" style="width: 500px;background:#27A1DB;padding-top: 75px;padding-bottom: 40px;font-family: 'Roboto', sans-serif;">
         <tr >
             <td>
-                <table style="background: white; width: 550px;    margin: 0 auto;padding: 20px;     margin-left: 22px;">
+         
+                <table style="margin-left: auto;">
+                    <tr>
+                        <td></td>
+                        <td style="text-align: right;color: white;"><a style="display: inline-block ; color: white;text-decoration: none;" href="https://www.advancedone.com.au/" target="_blank">View in Browser</a></td>
+                    </tr>
+                </table>
+                <table style="background: white; width: 500px;    margin: 0 auto;padding: 20px;     ">
                     <tr>
                         <td>
-                            <img style="width: 100%;"
-                                src="https://demo.a1portal.com.au/assets/imgs/advanchedOneLogo-v.png" alt="">
+                            <img style="width: 200px;"
+                                src="https://dev.a1portal.com.au/assets/imgs/logoAdvanceOneFull4.png" alt="">
                         </td>
-                        <td style="text-align: right;">
+                        <!-- <a ><img src="https://i.ibb.co/6rhJs8F/logo-email.png" alt="logo-email" border="0"></a> -->
+                        <td style="text-align: right;width: 300px;">
                             <h2 style="font-size: 12px;font-weight:bold;margin-bottom: 0;color: #27A1DB;">ADVANCED ONE PTYLTD</h2>
                             <p style="font-size: 12px;font-weight:normal;margin: 0; color: #1E293B;">ABN: 62 161 859 552
                             </p>
                         </td>
                     </tr>
                 </table>
-                <table style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;    margin-left: 22px;">
+                <table style="background: #334155; width: 500px;    margin: 0 auto;padding: 20px; color: white;    ">
                     <tr>
-                        <td style="text-align:center;font-size: 30px;font-weight: bold;">Order Conformation
+                        <td style="text-align:center;font-size: 30px;font-weight: bold;font-family: Arial, Helvetica, sans-serif;">Order Conformation
                         </td>
                     </tr>
                     <tr>
@@ -43,10 +51,10 @@
                             your invoice. </td>
                     </tr>
                 </table>
-                <table style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;    margin-left: 22px;">
+                <table style="background: #334155; width: 500px;    margin: 0 auto;padding: 20px; color: white;    ">
                     <tr style="padding-top: 0;padding-bottom: 0;">
                         <td style="padding-top: 0;padding-bottom: 0;">Invoice Number: 3173</td>
-                        <td style="padding-top: 0;padding-bottom: 0;">Tentative Date:
+                        <td style="padding-top: 0;padding-bottom: 0;text-align: right;">Tentative Date:
                             19/01/2021 - 26/01/2021</td>
                     </tr>
                     <tr style="padding-top: 0;padding-bottom: 0;">
@@ -56,28 +64,28 @@
                         <td style="padding-top: 0;padding-bottom: 0;">Order Date: 22/12/2020</td>
                     </tr>
                 </table>
-                <table style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;    margin-left: 22px;">
-                    <tr>
+                <table style="background: #334155; width: 500px !important;    margin: 0 auto;padding: 20px; color: white;    ">
+                    <tr style="width: 100% !important;">
                         <td style="padding-top: 0;padding-bottom: 0;">Total</td>
                         <td style="text-align: right;padding-top: 0;padding-bottom: 0;">$234.00</td>
                     </tr>
-                    <tr>
+                    <tr style="width: 100% !important;">
                         <td style="padding-top: 0;padding-bottom: 0;">Paid To Date</td>
                         <td style="text-align: right;padding-top: 0;padding-bottom: 0;">$134.00</td>
 
                     </tr>
-                    <tr>
+                    <tr style="width: 100% !important;">
                         <td style="padding-top: 0;padding-bottom: 0;">Payment Due</td>
                         <td style="text-align: right;padding-top: 0;padding-bottom: 0;">$100.00</td>
                     </tr>
                 </table>
-                <table style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;    margin-left: 22px;">
+                <table style="background: #334155; width: 500px;    margin: 0 auto;padding: 20px; color: white;    ">
                     <tr>
                         <td>If you have any query please call us on 1300 85 92 94 <a style="color:white; display: inline-block;text-decoration: none;">admin@advancedone.com.au</a>.</td>
                     </tr>
                 </table>
                 <table
-                    style="background: #334155; width: 550px;    margin: 0 auto;padding: 20px; color: white;padding-bottom: 20px;    margin-left: 22px;">
+                    style="background: #334155; width: 500px;    margin: 0 auto;padding: 20px; color: white;padding-bottom: 20px;    ">
                     <tr>
                         <td style="padding-top: 0;padding-bottom: 0;">ADVANCED ONE PTY LTD
                         </td>
@@ -92,12 +100,12 @@
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding-top: 0;">ABN: 62 161 859 552 </td>
+                        <td style="padding-top: 0;padding-bottom: 20px;">ABN: 62 161 859 552 </td>
                     </tr>
                 </table>
                 <!-- footer -->
                 <table
-                    style=" width: 550px;    margin: 0 auto;padding: 20px; color: white;padding-bottom: 20px;text-align: center;    margin-left: 22px;">
+                    style=" width: 500px;    margin: 0 auto;padding: 20px; color: white;padding-bottom: 20px;text-align: center;    ">
                     <tr>
                         <td style="text-align: center;padding-top: 0;padding-bottom: 0;">
                             <a style="color: #334155;  text-decoration: none;font-size: 14px;font-weight:normal;"
@@ -118,7 +126,7 @@
                         </td>
                     </tr>
                 </table>
-                <table style=" width: 550px;    margin: 0 auto;padding: 10px; color: white;padding-bottom: 10px;text-align: center;    margin-left: 22px;">
+                <table style=" width: 500px;    margin: 0 auto;padding: 10px; color: white;padding-bottom: 10px;text-align: center;    ">
                     <tr>
                         <td style="text-align: center;color: white;padding-top: 0;padding-bottom: 0;">
                             LICENCES
@@ -126,7 +134,7 @@
                     </tr>
                 </table>
                 <table
-                    style=" width: 550px;      margin: 0 auto;padding: 10px; color: white;padding-bottom: 10px;text-align: center;border-top: 1px solid white;border-bottom: 1px solid white; margin-left: 22px; ">
+                    style=" width: 550px;margin: 0 auto;padding: 10px; color: white;padding-bottom: 10px;text-align: center;border-top: 1px solid white;border-bottom: 1px solid white;  ">
                     <tr>
                         <td style="text-align: center;color: white;font-size: 12px;padding-top: 0;padding-bottom: 0;">
                             QBCC Lic. No: 1307036 | ARCTICK Lic. No: AU37346 | VIC Elec. Cont. Lic. No: 28462
